support for script execution,making docker token optional,UI page for status

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -7,9 +7,9 @@
 <body>
 <h1>No touch onboarding request page</h1>
 <form action="#" th:action="@{/requestJenkins}" th:object="${request}" method="post">
-    <p>org/repo: <input type="text" th:field="*{orgRepo}" /></p>
-    <p>git token: <input type="text" th:field="*{gitToken}" /></p>
-    <p>git token: <input type="text" th:field="*{dockerToken}" /></p>
+    <p>org/repo: <input type="text" th:field="*{org}" /></p>
+    <p>Git token: <input type="text" th:field="*{gitToken}" /></p>
+    <p>Docker token: <input type="text" th:field="*{dockerToken}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
