CI name input for requst page, placeholder, and status redirect correction

--- a/src/main/resources/templates/getStatus.html
+++ b/src/main/resources/templates/getStatus.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Know your Jenkins Status</h1>
 <form action="#" th:action="@{/status}" th:object="${status}" method="post">
-    <p>org: <input type="text" th:field="*{org}" /></p>
+    <p>CI Name: <input type="text" th:field="*{ciname}"  placeholder= " enter ci name here"/></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
